--- a/css/index.css
+++ b/css/index.css
@@ -1,12 +1,10 @@
-#gluttonous-snake
-
 #dakuai{
 	width:310px;
 	height: 310px;
 	border:red;
 	/*border: 1px solid red;*/
-/*	margin: 0 auto;
-	box-shadow: 1px 1px 14px #666;*/
+	margin: 10% auto 0;
+	box-shadow: 1px 1px 14px #666;
 }
 .xiaokuai{
 	margin-top: -1px;
